--- a/.env_deploy
+++ b/.env_deploy
@@ -1,11 +1,15 @@
-POSTGRES_USER =
-POSTGRES_PASSWORD =
+POSTGRES_USER = admin
+POSTGRES_PASSWORD = 22061941
 POSTGRES_DB = movie_db
 POSTGRES_HOST = postgres
 POSTGRES_PORT = 5432
 
 SECRET_KEY = 'secret'
 
-## --- deploy --- #
+## --- dev --- ## 
+# DEBUG = True
+# ALLOWED_HOSTS = 127.0.0.1,localhost
+
+## --- deploy --- ## 
 DEBUG = False
 ALLOWED_HOSTS = *
